--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,15 +8,18 @@ update:
     - which php
     # Pfad zum neu geklonten Repo
     - path=`pwd`
-    - cd ~/
     # Klone das Repo neu, falls es noch nicht existiert
     - if [ ! -d ~/MetaGer ] ; then git clone "$path" ; fi
     # Falls notwendig Laravel-Framework initialisieren:
-    - cd MetaGer
+    - cd ~/MetaGer
     - composer update
-    - chmod -R 777 storage/ bootstrap/cache/
+    - tmp=$(chmod -R 777 storage/ bootstrap/cache)
     - if [ ! -f .env ] ; then cp .env.example .env ; fi
     - if [ $(grep "SomeRandomString" .env) ] ; then php artisan key:generate ; fi
+    # Falls notwendig Homestead Server intialisieren:
+    - cd ~/
   script:
     - cd ~/MetaGer
     - git pull "$path"
+  only:
+    - master@gitlab.metager3.de:1234/
