--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ update:
     # Pfad zum neu geklonten Repo
     - path=`pwd`
     - cd ~/
-    - $path/deploy/checkServerStatus.sh
+    - $path/deploy/checkServerStatus.sh "$path"
   script:
     - cd ~/MetaGer
     - git pull "$path"
