Kontaktformular hinzugefügt. Emails werden auch versendet solange in der .env die richtigen Mail Einstellungen zur Verfügung gestellt werden.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "mcamara/laravel-localization": "^1.1"
+        "mcamara/laravel-localization": "^1.1",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
