--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ update:
     # Pfad zum neu geklonten Repo
     - path=`pwd`
     - cd ~/
-    - if [ -d MetaGer_neu ];then; rm -rf MetaGer_neu;fi
+    - if [ -d MetaGer_neu ]; then rm -rf MetaGer_neu;fi
     - git clone "$path" MetaGer_neu
     - cd MetaGer_neu
     - composer update
