--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ update:
     - chmod -R 777 storage
     - chmod -R 777 bootstrap/cache
     - scp metager@metager3.de:~/.env .
+    - scp metager@metager3.de:~/sumas.xml config/
+    - scp metager@metager3.de:~/sumasEn.xml config/
     - cd ~/
     - rm -rf MetaGer
     - mv MetaGer_neu MetaGer
